--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 						<i class="fa fa-home mobile-only"></i>
 						<span class="pc-only">Home</span>
 					</li></a>
-					<a onclick="go('#plataforma')"><li>Plataforma</li></a>
-					<a onclick="go('#musicas')"><li>Músicas</li></a>
-					<a onclick="go('#trailer')"><li>Trailer</li></a>
-					<a onclick="go('#contato')"><li>**Contato**</li></a>
+					<a onclick="go('#plataforma')" onTap="go('#plataforma')"><li>Plataforma</li></a>
+					<a onclick="go('#musicas')" onTap="go('#musicas')"><li>Músicas</li></a>
+					<a onclick="go('#trailer')" onTap="go('#trailer')"><li>Trailer</li></a>
+					<a onclick="go('#contato')" onTap="go('#contato')"><li>**Contato**</li></a>
 				</div>
 			</label>
         </ul>
