--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script>
         $(document).ready(function(){
             "use strict";
+			$.ajaxSetup({ cache: false });
             $('.nav a[href^="#"]').on('click', function(e) {
                 e.preventDefault();
 	            document.getElementById("trigg").checked = false;
