--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="menu">
         <ul class="nav">
 			<input type="checkbox" class="trigger" id="trigg"/>
-			<label class="all">
+			<div class="all">
 				<label class="hamburg" for="trigg">
 					<div class="hbar1"></div>
 					<div class="hbar2"></div>
@@ -74,7 +74,7 @@
 					<a href="#trailer"><li>Trailer</li></a>
 					<a href="#contato"><li>Contato*</li></a>
 				</div>
-			</label>
+			</div>
         </ul>
     </div>
     <!-- Cabeçalho
