--- a/index.html
+++ b/index.html
@@ -17,20 +17,7 @@
     <!-- JS e JQUERY
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('.nav a[href^="#"]').on('click', function(e) {
-                e.preventDefault();
-	            document.getElementById("trigg").checked = false;
-                var id = $(this).attr('href'),
-                        targetOffset = $(id).offset().top;
-
-                $('html, body').animate({ 
-                    scrollTop: targetOffset - 45
-                }, 500);
-            });
-        });
-    </script>
+    <script src="js/script.js"></script>
    
     <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
