--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     
     <!-- JS e JQUERY
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="js/script.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
    
     <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
