--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
                 <div class="four columns">
                     <img src="images/fofix.png" alt="logo de Acts 26:18" class="perfil space">
                     <img src="images/logo_p.png" alt="logo de FoFix" class="perfil">
+                    <div class="space">
+                    </div>
                 </div>
             </div>
         </div>
@@ -182,13 +184,10 @@
     <article class="section wmusic" id="trailer">
         <div class="container">
             <div class="row">
-                <h3 class="texto-medio nospace">Trailer</h3>
-                <p class="texto-pequeno">Video de testes simulando o trailer do jogo</p>
-            </div>
-            <div class="row">
-                <style></style>
+                <h3 class="texto-grande trailer-text">Trailer</h3>
                 <div class='embed-container'><iframe src="https://player.vimeo.com/video/261385115?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
-
+            </div>
+            <div class="space">
             </div>
 
         </div>
