--- a/contato.html
+++ b/contato.html
@@ -82,7 +82,7 @@
                     <div class="four columns texto-left footer-border">
                         <p class="texto-medio no-space">Links:</p>
                         <p class="texto-pequeno no-space">Fof: <a href="http://fretsonfire.wikidot.com" target="_blank">Página Oficial</a></p>
-                        <p class="texto-pequeno">Fofix: <a href="http://fretsonfire.wikidot.com/fofix" target="_blank">Página Oficial</a></p>
+                        <p class="texto-pequeno">Fofix: <a href="https://code.google.com/archive/p/fofix/" target="_blank">Página Oficial</a></p>
                     </div>
                     <div class="three columns texto-left">
                         <p class="texto-medio no-space">Navegação:</p>
