--- a/index.html
+++ b/index.html
@@ -1,21 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-	    
-        <!-- HotJar
-        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	<!-- Hotjar Tracking Code for https://acts2618.github.io/ -->
-	<script>
-	    (function(h,o,t,j,a,r){
-		h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-		h._hjSettings={hjid:832071,hjsv:6};
-		a=o.getElementsByTagName('head')[0];
-		r=o.createElement('script');r.async=1;
-		r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-		a.appendChild(r);
-	    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-	</script>
-	    
         <!-- Basic Page Needs
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8">
@@ -46,7 +31,7 @@
 
         <!-- Favicon
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <link rel="icon" type="image/png" href="img/favicon.png">
+        <link rel="icon" type="image/png" href="images/favicon.png">
     </head>
     <body>
         <nav class="menu">
@@ -120,7 +105,7 @@
                         <div class="eight columns">
                             <h3 class="texto-medio">A Plataforma</h3>
                             <p class="texto-pequeno">Acts 26:18 é na realidade um mod de um jogo existente, chamado "FoFix". Segundo o site oficial, <i>"FoFiX é uma variação de Frets On Fire que tenta se assemelhar ao Guitar Hero e ao Rock Band, mantendo alguns dos aspectos originais do FoF.</i></p>
-                            <p class="texto-pequeno">FoFix é um projeto complexo desenvolvido por mais de 20 pessoas,  que pode ser visto <a href="http://fretsonfire.wikidot.com/fofix" target="_blank">clicando aqui</a>, e Acts 26:18 Utiliza essa plataforma/jogo para ser executado, sendo apenas uma modificação gráfica e tendo seu proprio modo carreira e setlist exclusivas.</p>
+                            <p class="texto-pequeno">FoFix é um projeto complexo desenvolvido por mais de 20 pessoas,  que pode ser visto <a href="https://code.google.com/archive/p/fofix/" target="_blank">clicando aqui</a>, e Acts 26:18 Utiliza essa plataforma/jogo para ser executado, sendo apenas uma modificação gráfica e tendo seu proprio modo carreira e setlist exclusivas.</p>
                             <p class="texto-pequeno">Vale ressaltar que este é um projeto aberto que não visa lucro e não detém direitos autorais sobre as músicas do mesmo.</p>
                         </div>
                         <div class="four columns">
@@ -217,7 +202,7 @@
                     <div class="four columns texto-left footer-border">
                         <p class="texto-medio no-space">Links:</p>
                         <p class="texto-pequeno no-space">Fof: <a href="http://fretsonfire.wikidot.com" target="_blank">Página Oficial</a></p>
-                        <p class="texto-pequeno">Fofix: <a href="http://fretsonfire.wikidot.com/fofix" target="_blank">Página Oficial</a></p>
+                        <p class="texto-pequeno">Fofix: <a href="https://code.google.com/archive/p/fofix/" target="_blank">Página Oficial</a></p>
                     </div>
                     <div class="three columns texto-left">
                         <p class="texto-medio no-space">Navegação:</p>
