--- a/index.html
+++ b/index.html
@@ -1,29 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-	<!-- Global site tag (gtag.js) - Google Analytics
-        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116721499-1"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-
-	  gtag('config', 'UA-116721499-1');
-	</script>
-	<!-- Hotjar Tracking Code for https://acts2618.github.io/
-        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	<script>
-	    (function(h,o,t,j,a,r){
-		h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-		h._hjSettings={hjid:832071,hjsv:6};
-		a=o.getElementsByTagName('head')[0];
-		r=o.createElement('script');r.async=1;
-		r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-		a.appendChild(r);
-	    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-	</script>
-
         <!-- Basic Page Needs
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8">
@@ -70,7 +47,8 @@
 						<i class="fa fa-home pc-only"></i>
 						<span class="mobile-only">Home</span>
 					</li></a>
-					<a href="#plataforma"><li>Plataforma</li></a>
+					<a href="download.html"><li>Download</li></a>
+					<a href="#jogo"><li>O Jogo</li></a>
 					<a href="#musicas"><li>Músicas</li></a>
 					<a href="#trailer"><li>Trailer</li></a>
 					<a href="contato.html" target="_self"><li>Contato</li></a>
@@ -122,22 +100,35 @@
             
             <!-- PLATAFORMA
             –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-            <article class="section plataforma" id="plataforma">
+            <article class="section jogo" id="jogo">
                 <div class="container">
                     <div class="row">
-                        <div class="eight columns">
-                            <h3 class="texto-medio">A Plataforma</h3>
-                            <p class="texto-pequeno">Acts 26:18 é na realidade um mod de um jogo existente, chamado "FoFix". Segundo o site oficial, <i>"FoFiX é uma variação de Frets On Fire que tenta se assemelhar ao Guitar Hero e ao Rock Band, mantendo alguns dos aspectos originais do FoF.</i></p>
-                            <p class="texto-pequeno">FoFix é um projeto complexo desenvolvido por mais de 20 pessoas,  que pode ser visto <a href="https://code.google.com/archive/p/fofix/" target="_blank">clicando aqui</a>, e Acts 26:18 Utiliza essa plataforma/jogo para ser executado, sendo apenas uma modificação gráfica e tendo seu proprio modo carreira e setlist exclusivas.</p>
-                            <p class="texto-pequeno">Vale ressaltar que este é um projeto aberto que não visa lucro e não detém direitos autorais sobre as músicas do mesmo.</p>
+                        <h3 class="texto-medio no-space">O Jogo</h3>
+                        <p class="texto-pequeno">Conheça mais sobre Acts 26:18</p>
+                    </div>
+                    <div class="row">
+                        <p class="img-ajust"><img alt="imagens ilustrativas do mod" src="img/propaganda_m.png"></p>
+                        <p class="texto-pequeno">Acts 26:18 é um <strong>"Guitar Hero"</strong> com um foco um pouco fora do convencional. Acts é na realidade um mod de um jogo existente, chamado "FoFix". Segundo o site oficial, <i>"FoFiX é uma variação de Frets On Fire que tenta se assemelhar ao Guitar Hero e ao Rock Band, mantendo alguns dos aspectos originais do FoF.</i></p>
+                    </div>
+                    <div class="row">
+                        <div class="four columns ilustrativo">
+                            <img alt="imagem ilustrativa do jogo original sem o mod" src="img/original-fofix.jpg">
+                            <p>Print do jogo original sem o mod</p>
                         </div>
-                        <div class="four columns">
-                            <div class="row extra-space">
-                                <img src="img/fofix.png" alt="logo de Acts 26:18" class="perfil logo-img space">
-                            </div>
-                            <div class="row">
-                                <img src="img/logo_p.png" alt="logo de FoFix" class="perfil logo-img">
-                            </div>
+
+                        <div class="six columns">
+                            <p class="texto-pequeno">FoFix é um projeto complexo desenvolvido por mais de 20 pessoas,  você pode visitar a página oficial do projeto do Google Code <a href="https://code.google.com/archive/p/fofix/" target="_blank">clicando aqui</a>. Acts 26:18 Utiliza essa plataforma/jogo para ser executado, sendo apenas uma modificação gráfica e um pacote pré-configurado que conta com um modo carreira (não oferecido pelo jogo original) e setlist exclusiva, pensada exclusivamente para o objetivo do mod.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <p class="texto-pequeno">Vale ressaltar que Acts é um projeto aberto que não visa lucro de nenhuma forma.</p>
+                    </div>
+                    <div class="row">
+                        <div class="six columns">
+                            <img src="img/fofix.png" alt="logo de Acts 26:18" class="logo-img">
+                        </div>
+                        <div class="six columns">
+                            <img src="img/logo_p.png" alt="logo de FoFix" class="logo-img">
                         </div>
                     </div>
                 </div>
