--- a/index.html
+++ b/index.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
+		<!-- Global site tag (gtag.js) - Google Analytics
+			–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116721499-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		  gtag('config', 'UA-116721499-1');
+		</script>
+		<!-- Hotjar Tracking Code for https://acts2618.github.io/
+			–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+		<script>
+			(function(h,o,t,j,a,r){
+			h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+			h._hjSettings={hjid:832071,hjsv:6};
+			a=o.getElementsByTagName('head')[0];
+			r=o.createElement('script');r.async=1;
+			r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+			a.appendChild(r);
+			})(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+		</script>
+		
         <!-- Basic Page Needs
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8">
@@ -31,7 +53,7 @@
 
         <!-- Favicon
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <link rel="icon" type="image/png" href="images/favicon.png">
+        <link rel="icon" type="image/png" href="img/favicon.png">
     </head>
     <body>
         <nav class="menu">
