--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
 		<!-- Global site tag (gtag.js) - Google Analytics
-			–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116721499-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
@@ -11,7 +11,7 @@
 		  gtag('config', 'UA-116721499-1');
 		</script>
 		<!-- Hotjar Tracking Code for https://acts2618.github.io/
-			–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 		<script>
 			(function(h,o,t,j,a,r){
 			h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -60,9 +60,11 @@
 			<input type="checkbox" class="trigger" id="trigg">
 			<ul class="box-menu">
 				<label class="hamburg" for="trigg">
-					<div class="hbar1"></div>
-					<div class="hbar2"></div>
-					<div class="hbar3"></div>
+                    <div class="hicon">
+                        <div class="hbar1"></div>
+                        <div class="hbar2"></div>
+                        <div class="hbar3"></div>
+                    </div>
 				</label>
 				<div class="menu-content">
 					<a href="#topo"><li>
@@ -120,7 +122,7 @@
                 </div>
             </article>
             
-            <!-- PLATAFORMA
+            <!-- O JOGO
             –––––––––––––––––––––––––––––––––––––––––––––––––– -->
             <article class="section jogo" id="jogo">
                 <div class="container">
@@ -129,8 +131,8 @@
                         <p class="texto-pequeno">Conheça mais sobre Acts 26:18</p>
                     </div>
                     <div class="row">
-                        <p class="img-ajust"><img alt="imagens ilustrativas do mod" src="img/propaganda_m.png"></p>
-                        <p class="texto-pequeno">Acts 26:18 é um <strong>"Guitar Hero"</strong> com um foco um pouco fora do convencional. Acts é na realidade um mod de um jogo existente, chamado "FoFix". Segundo o site oficial, <i>"FoFiX é uma variação de Frets On Fire que tenta se assemelhar ao Guitar Hero e ao Rock Band, mantendo alguns dos aspectos originais do FoF.</i></p>
+                        <p class="img-adjust"><img alt="imagens ilustrativas do mod" src="img/propaganda_m.png"></p>
+                        <p class="texto-pequeno">Acts 26:18 é um <strong>"Guitar Hero"</strong> com um foco um pouco fora do convencional. Acts é na realidade um MOD* de um jogo existente, chamado "FoFix". Segundo seu site oficial, <i>"FoFiX é uma variação de Frets On Fire que tenta se assemelhar ao Guitar Hero e ao Rock Band, mantendo alguns dos aspectos originais do FoF.</i></p>
                     </div>
                     <div class="row">
                         <div class="four columns ilustrativo">
@@ -138,12 +140,12 @@
                             <p>Print do jogo original sem o mod</p>
                         </div>
 
-                        <div class="six columns">
-                            <p class="texto-pequeno">FoFix é um projeto complexo desenvolvido por mais de 20 pessoas,  você pode visitar a página oficial do projeto do Google Code <a href="https://code.google.com/archive/p/fofix/" target="_blank">clicando aqui</a>. Acts 26:18 Utiliza essa plataforma/jogo para ser executado, sendo apenas uma modificação gráfica e um pacote pré-configurado que conta com um modo carreira (não oferecido pelo jogo original) e setlist exclusiva, pensada exclusivamente para o objetivo do mod.</p>
+                        <div class="eight columns">
+                            <p class="texto-pequeno">FoFix é um projeto complexo desenvolvido por mais de 20 pessoas,  você pode visitar a página oficial do projeto no Google Code <a href="https://code.google.com/archive/p/fofix/" target="_blank">clicando aqui</a>. Acts 26:18 Utiliza essa plataforma/jogo para ser executado, sendo apenas uma modificação gráfica e um pacote pré-configurado que conta com um modo carreira (não oferecido pelo jogo original) e setlist exclusiva, pensada unicamente para o objetivo do mod.</p>
                         </div>
                     </div>
                     <div class="row">
-                        <p class="texto-pequeno">Vale ressaltar que Acts é um projeto aberto que não visa lucro de nenhuma forma.</p>
+                        <p class="texto-pequeno">Vale ressaltar que Acts é um projeto aberto que não visa fins lucrativos de nenhuma forma.</p>
                     </div>
                     <div class="row">
                         <div class="six columns">
