--- a/download.html
+++ b/download.html
@@ -40,9 +40,11 @@
 			<input type="checkbox" class="trigger" id="trigg">
 			<ul class="box-menu">
 				<label class="hamburg" for="trigg">
-					<div class="hbar1"></div>
-					<div class="hbar2"></div>
-					<div class="hbar3"></div>
+                    <div class="hicon">
+                        <div class="hbar1"></div>
+                        <div class="hbar2"></div>
+                        <div class="hbar3"></div>
+					</div>
 				</label>
 				<div class="menu-content">
 					<a href="index.html"><li>
@@ -58,6 +60,8 @@
 			</ul>
         </nav>
         
+        <!-- HEADER INTRODUTORIO / BANNER
+        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <header class="download-header" id="topo">
             <h2 style="display: none">Cabeçalho</h2>
             <div class="container">
@@ -66,6 +70,7 @@
                 </div>
             </div>
         </header>
+        
         <!-- Principal
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <main class="main" id="main">
