--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
         <link rel="icon" type="image/png" href="img/favicon.png">
     </head>
     <body>
-        <nav class="menu">
+        <!-- Top Menu
+        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <nav class="menu" id="menu">
 			<input type="checkbox" class="trigger" id="trigg">
 			<ul class="box-menu">
 				<label class="hamburg" for="trigg">
@@ -92,7 +94,9 @@
             </div>
         </header>
         
-        <main>
+        <!-- Principal
+        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <main class="main" id="main">
             <h1 style="display: none">Informações Importantes</h1>
             
             <!-- DESENVOLVIMENTO
