--- a/download.html
+++ b/download.html
@@ -90,19 +90,19 @@
                     <div class="row">
                         <div class="download-seletores">
                             <div class="download-sd" id="seletor-windows">
-                                <a rel="windows">
+                                <a href="#download" rel="windows">
                                     <i class="fa fa-windows"></i>
                                     <p>Windows</p>
                                 </a>
                             </div>
                             <div class="download-sd" id="seletor-linux">
-                                <a rel="linux">
+                                <a href="#download" rel="linux">
                                     <i class="fa fa-linux"></i>
                                     <p>Linux</p>
                                 </a>
                             </div>
                             <div class="download-sd" id="seletor-apple">
-                                <a rel="apple">
+                                <a href="#download" rel="apple">
                                     <i class="fa fa-apple"></i>
                                     <p>MacOS</p>
                                 </a>
