--- a/contato.html
+++ b/contato.html
@@ -113,5 +113,7 @@
                 </div>
             </div>
         </footer>
+        
+        <script type="text/javascript" src="js/pace.min.js"></script>
     </body>  
 </html>
