--- a/download.html
+++ b/download.html
@@ -212,5 +212,7 @@
                 </div>
             </div>
         </footer>
+        
+        <script type="text/javascript" src="js/pace.min.js"></script>
     </body>  
 </html>
