--- a/index.html
+++ b/index.html
@@ -255,5 +255,7 @@
                 </div>
             </div>
         </footer>
+        
+        <script type="text/javascript" src="js/pace.min.js"></script>
     </body>  
 </html>
