--- a/contato.html
+++ b/contato.html
@@ -54,7 +54,7 @@
 					<a href="download.html"><li>Download</li></a>
 					<a href="index.html#jogo"><li>O Jogo</li></a>
 					<a href="index.html#musicas"><li>Músicas</li></a>
-					<a href="index.html#trailer"><li>Trailer</li></a>
+					<a href="index.html#desenvolvimento"><li>dev</li></a>
 					<a href="contato.html"><li>Contato</li></a>
 				</div>
 			</ul>
