--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </div>
                     <div class="row">
                         <div class="four columns">
-                            <p class="texto-medio nome-musica no-space">Pisaduras</p>
+                            <p class="texto-medio roxo no-space">Pisaduras</p>
                             <p class="texto-medio">Rodolfo Abrantes</p>
                             <p class="texto-pequeno no-space">Expert: JimmyF.</p>
                             <p class="texto-pequeno no-space">Hard: JimmyF.</p>
@@ -171,7 +171,7 @@
                             <p class="texto-pequeno">Revisão: ---</p>
                         </div>
                         <div class="four columns">
-                            <p class="texto-medio nome-musica no-space">De Deus não se Zomba</p>
+                            <p class="texto-medio roxo no-space">De Deus não se Zomba</p>
                             <p class="texto-medio">Fruto Sagrado</p>
                             <p class="texto-pequeno no-space">Expert: JimmyF.</p>
                             <p class="texto-pequeno no-space">Hard: JimmyF.</p>
@@ -180,7 +180,7 @@
                             <p class="texto-pequeno">Revisão: ---</p>
                         </div>
                         <div class="four columns">
-                            <p class="texto-medio nome-musica no-space">Hero</p>
+                            <p class="texto-medio roxo no-space">Hero</p>
                             <p class="texto-medio">Skillet</p>
                             <p class="texto-pequeno no-space">Expert: JimmyF.</p>
                             <p class="texto-pequeno no-space">Hard: JimmyF.</p>
@@ -191,12 +191,30 @@
                     </div>
                     <div class="row">
                         <div class="four columns">
-                            <p class="texto-medio nome-musica no-space">Big Screen Lies</p>
+                            <p class="texto-medio roxo no-space">Big Screen Lies</p>
                             <p class="texto-medio">Stryper</p>
                             <p class="texto-pequeno no-space">Expert: JimmyF.</p>
                             <p class="texto-pequeno no-space">Hard: JimmyF.</p>
                             <p class="texto-pequeno no-space">Normal: JimmyF.</p>
                             <p class="texto-pequeno no-space">Easy: JimmyF.</p>
+                            <p class="texto-pequeno">Revisão: ---</p>
+                        </div>
+                        <div class="four columns">
+                            <p class="texto-medio roxo no-space">????????</p>
+                            <p class="texto-medio">????? ?????</p>
+                            <p class="texto-pequeno no-space">Expert: ---</p>
+                            <p class="texto-pequeno no-space">Hard: ---</p>
+                            <p class="texto-pequeno no-space">Normal: ---</p>
+                            <p class="texto-pequeno no-space">Easy: ---</p>
+                            <p class="texto-pequeno">Revisão: ---</p>
+                        </div>
+                        <div class="four columns">
+                            <p class="texto-medio roxo no-space">????????</p>
+                            <p class="texto-medio">????? ?????</p>
+                            <p class="texto-pequeno no-space">Expert: ---</p>
+                            <p class="texto-pequeno no-space">Hard: ---</p>
+                            <p class="texto-pequeno no-space">Normal: ---</p>
+                            <p class="texto-pequeno no-space">Easy: ---</p>
                             <p class="texto-pequeno">Revisão: ---</p>
                         </div>
                     </div>
@@ -210,22 +228,26 @@
                     <div class="row">
                         <h3 class="texto-medio titulo extra-space">Quanto já foi desenvolvido?</h3>
                     </div>
-                    <div class="row">
+                    <div class="row extra-space">
                         <div class="one-third column">
-                            <p class="texto-grande porcentagem">13%</p>
+                            <p class="texto-grande roxo">13%</p>
                             <p class="texto-medio">Músicas</p>
                             <p class="texto-pequeno">As músicas são desenvolvidas via software, e precisam ser feitas em 4 níveis de dificuldade<br>(easy, normal, hard, expert)</p>
                         </div>
                         <div class="one-third column">
-                            <p class="texto-grande porcentagem">98%</p>
+                            <p class="texto-grande roxo">98%</p>
                             <p class="texto-medio">Gráficos</p>
                             <p class="texto-pequeno">Temos a intenção de trocas as imagens disponíveis de perfil, mas de resto, o mod* está visualmente pronto!</p>
                         </div>
                         <div class="one-third column">
-                            <p class="texto-grande porcentagem">0%</p>
+                            <p class="texto-grande roxo">0%</p>
                             <p class="texto-medio">Revisão</p>
                             <p class="texto-pequeno">Essa é uma parte importante, porém ainda não realizada. Nenhuma das informações foram revisadas :(</p>
                         </div>
+                    </div>
+                    <div class="row">
+                        <p class="texto-grande roxo">AJUDE-NOS A AVANÇAR!</p>
+                        <p class="texto-medio">Não é preciso ter conhecimento técnico para ajudar! <a href="contato.html">Entre em contato</a> para saber como criar novas músicas para o jogo e tenha o seu nome aqui no site!</p>
                     </div>
                 </div>
             </article>
